# jena-climate-dataset

./: .flake8  .gitignore  README.md  pyproject.toml
models/hiperparameters/: .pre-commit-config.yaml  hyperparams_201609.json  hyperparams_201611.json  hyperparams_201612.json
notebooks/: compare_models.ipynb  data_analysis.ipynb  lgbm.ipynb  sarima.ipynb  sarimax.ipynb
src/: preprocessing.py  tune_hyperparams.py  utils.py
