[tool.poetry]
name = "jena-climate-dataset"
version = "0.1.0"
description = "Requirements for jena-climate-dataset"
authors = ["marianehauy"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
darts = "^0.31.0"
pmdarima = "^2.0.4"
lightgbm = "^4.5.0"
scipy = "^1.14.1"
pre-commit = "^4.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
